[gd_scene load_steps=4 format=3 uid="uid://br18dx0acyoh6"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_hyust"]
[ext_resource type="Theme" uid="uid://brcdq62xfx56e" path="res://assets/ui/menu_theme.tres" id="2_feier"]
[ext_resource type="LabelSettings" uid="uid://b8k48q0r3gk63" path="res://assets/ui/hud_text.tres" id="2_pcpb7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hyust")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -32.0
offset_right = 20.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_feier")
theme_type_variation = &"FlatButton"
text = "Play"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_feier")
theme_type_variation = &"FlatButton"
text = "Options"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_feier")
theme_type_variation = &"FlatButton"
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_feier")
theme_type_variation = &"FlatButton"
text = "Quit"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Slime Climb"
label_settings = ExtResource("2_pcpb7")
horizontal_alignment = 1

[connection signal="button_down" from="VBoxContainer/PlayButton" to="." method="_on_new_game_button_button_down"]
[connection signal="button_down" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_button_down"]
[connection signal="button_down" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_button_down"]
[connection signal="button_down" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_button_down"]
